[package]
name = "bort-vma"
version = "0.2.3"
authors = ["Graham Wihlidal <graham@wihlidal.ca>"]
description = "Rust ffi bindings and idiomatic wrapper for AMD Vulkan Memory Allocator (VMA)"
homepage = "https://github.com/lilly-lizard/bort-vma"
repository = "https://github.com/lilly-lizard/bort-vma"
documentation = "https://docs.rs/bort-vma"
readme = "README.md"
keywords = ["vulkan", "vma", "ash", "memory", "allocator"]
categories = ["api-bindings", "rendering", "rendering::engine", "rendering::graphics-api", ]
license = "MIT/Apache-2.0"
build = "build.rs"
include = [
    "src/*.rs",
    "gen/bindings.rs",
    "build.rs",
    "Cargo.toml",
    "vendor/VulkanMemoryAllocator/include/vk_mem_alloc.h",
    "vendor/Vulkan-Headers/include/vk_platform.h",
    "vendor/Vulkan-Headers/include/vulkan_core.h",
    "vendor/Vulkan-Headers/include/vulkan.h",
    "wrapper/vma_lib.cpp",
]
edition = "2018"

[badges]
travis-ci = { repository = "lilly-lizard/bort-vma" }
maintenance = { status = "actively-developed" }

[dependencies]
ash = { version = "0.37", default-features = false }
bitflags = "2.0"

[build-dependencies]
cc = "1.0"

[build-dependencies.bindgen]
version = "0.64"
optional = true

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[features]
default = ["loaded"]
generate_bindings=["bindgen"]
linked=["ash/linked"]
loaded=["ash/loaded"]
recording=[]
